--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ rick-portal-gun = "androidpublisher.main:app"
 [tool.poetry.dependencies]
 python = "^3.7"
 typer = {extras = ["all"], version = "^0.3.2"}
+google-api-python-client = "^1.12.5"
+oauth2client = "^4.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
