--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "androidpublisher"
-version = "0.1.3"
+version = "0.1.4"
 description = ""
 authors = ["leynier <leynier41@gmail.com>"]
 readme = "README.md"
@@ -11,11 +11,12 @@ androidpublisher = "androidpublisher.main:app"
 [tool.poetry.dependencies]
 python = "^3.7"
 typer = {extras = ["all"], version = "^0.3.2"}
-google-api-python-client = "^1.12.5"
+google-api-python-client = "^1.12.8"
 oauth2client = "^4.1.3"
+six = "^1.13.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^6.2.1"
 black = "^20.8b1"
 flake8 = "^3.8.4"
 
